<resources>

    <string name="action_buscar">Buscar</string>
    <string name="action_crear">Crear</string>
    <string name="action_editar">Editar</string>
    <string name="action_eliminar">Eliminar</string>
    <string name="action_salir">Salir</string>
    <string name="action_settings">Configuración</string>

    <string name="app_name">Ejemplos 2</string>

    <string name="button_acercade">Acerca de</string>
    <string name="button_autos">Autos</string>
    <string name="button_finalizar">Finalizar</string>
    <string name="button_proyecto008">Proyecto 008</string>
    <string name="button_proyecto009">Proyecto 009</string>

    <string name="label_correo">jcjimenez29@misena.edu.co</string>

    <string name="label_cedula">Número de Cédula</string>
    <string name="label_nombrecolegio">Nombre del colegio</string>
    <string name="label_nombresapellidos">Nombres y Apellidos</string>
    <string name="label_numeromesa">Número de mesa</string>

    <string name="label_sena">Servicio Nacional de Apredizaje, SENA.</string>
    <string name="label_titulacion">Especialización Tecnológica en Desarrollo de Aplicaciones para Móviles.</string>

</resources>
