<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_crear"
        android:title="@string/action_crear"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_editar"
        android:title="@string/action_editar"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_eliminar"
        android:title="@string/action_eliminar"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
