<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    android:nestedScrollingEnabled="false">

    <TextView android:text="@string/label_sena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/tv_Titulo"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_titulacion"
        android:id="@+id/tv_SubTitulo"
        android:layout_below="@+id/tv_Titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="13dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_correo"
        android:id="@+id/tv_Creditos"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_proyecto008"
        android:id="@+id/btn_Proyecto008"
        android:layout_centerHorizontal="true"
        android:onClick="calculadora"
        android:layout_below="@+id/tv_SubTitulo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_proyecto009"
        android:id="@+id/btn_Proyecto009"
        android:layout_below="@+id/btn_Proyecto008"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

